--- a/Front-End/LoginPage.css
+++ b/Front-End/LoginPage.css
@@ -1,14 +1,54 @@
-body{
+/* Estilos para o corpo da página */
+html{
+    height: 100%;
+}
+body {
     display: flex;
-    height: 100vh;
-    align-items:center ;
+    height: 99%;
+    align-items: center;
     justify-content: center;
-    background-color: gray;
+    background-color: #1E1E1E;
 }
 
-.login-painel{
-
-display: inline;
-
+/* Estilos para o formulário de login */
+.login-painel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 20px;
+    height: 230px;
+    width: 290px;
+    padding-top: 50px;
 }
 
+.login-painel label {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    width: 100%; /* Largura total da etiqueta */
+}
+
+.login-painel input[type="email"],
+.login-painel input[type="password"] {
+    width: 100%; /* Largura total do campo de entrada */
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px; /* Margem inferior menor */
+    box-sizing: border-box; /* Garante que o preenchimento seja incluído na largura total */
+}
+
+.login-painel input[type="button"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.login-painel input[type="button"]:hover {
+    background-color: #3e8e41;
+}
